--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -40,13 +40,7 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
-@font-face
-{
-	font-family: 'Beyond';
-	src: url('../fonts/beyond_the_mountains.otf')  format('truetype'),
-		 url('../fonts/beyond_the_mountains.ttf')  format('opentype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
 /*********************************
 2. Body and some general stuff
@@ -54,6 +48,7 @@
 
 *
 {
+	font-family: 'Itim';
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
@@ -313,7 +308,7 @@ section
 {
 	position: fixed;
 	width: 100%;
-	background: #46a6a681;
+	background: #46a6a6c4;
 	z-index: 12;
 }
 .header.scrolled
