--- a/styles/single_listing_styles.css
+++ b/styles/single_listing_styles.css
@@ -44,13 +44,8 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
-@font-face
-{
-	font-family: 'Beyond';
-	src: url('../fonts/beyond_the_mountains.otf')  format('truetype'),
-		 url('../fonts/beyond_the_mountains.ttf')  format('opentype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 
 /*********************************
 2. Body and some general stuff
@@ -58,6 +53,7 @@
 
 *
 {
+	font-family: 'Itim';
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
