--- a/styles/about_styles.css
+++ b/styles/about_styles.css
@@ -249,7 +249,7 @@ section
 	left: 0;
 	width: 200%;
 	height: 100%;
-	background: linear-gradient(to right, #fa9e1b, #8d4fff, #fa9e1b);
+	background: linear-gradient(to right, #46A6A6, #F2E1AE, #012E40);
 	z-index: -1;
 	-webkit-transition: all 400ms ease;
 	-moz-transition: all 400ms ease;
@@ -787,38 +787,121 @@ section
 /*********************************
 5. Intro
 *********************************/
-
 .intro
 {
 	width: 100%;
-	padding-top: 92px;
+	padding-top: 100px;
 	padding-bottom: 105px;
-	background: #f6f9fb;
-}
-.intro_image
-{
-	position: absolute;
-    right: 0;
-    top: 13px;
 }
 .intro_title
 {
-	font-size: 30px;
 	font-weight: 700;
 	color: #2d2c2c;
-	text-transform: uppercase;
+	margin-top: -14px;
 }
 .intro_text
 {
-	margin-bottom: 0px;
-	font-weight: 600;
+	margin-top: 21px;
+}
+
+.intro_text p
+{
+	font-size: 24px;
+	font-style: italic;
 	color: #929191;
-	margin-top: 60px;
+	line-height: 1.336;
+	margin-bottom: 0px;
+}
+.intro_items
+{
+	margin-top: 69px;
+}
+
+.intro_item
+{
+	width: 100%;
+	height: 425px;
+}
+
+.intro_item_overlay
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	background: #F2E1AE;
+	border-radius: 32px;
+}
+
+.intro_item_background
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	z-index: 1;
+}
+.intro_item_content
+{
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+}
+.intro_date
+{
+	position: absolute;
+	top: 35px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);
+	width: auto;
+	padding-left: 39px;
+	padding-right: 39px;
+	white-space: nowrap;
+	font-size: 13px;
+	font-weight: 400;
+	color: #FFFFFF;
+	line-height: 27px;
+	background: #F2E1AE;
+	border-radius: 14px;
 }
 .intro_button
 {
-	margin-top: 57px;
-	z-index: 1;
+	position: absolute;
+	bottom: 51px;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+.intro_center
+{
+
+}
+.intro_center h1
+{
+	font-size: 59px;
+	font-weight: 700;
+	color: #FFFFFF;
+	letter-spacing: -0.05em;
+}
+.intro_price
+{
+	font-size: 14px;
+	font-weight: 400;
+	color: #FFFFFF;
+	margin-top: -4px;
 }
 
 /*********************************
@@ -888,6 +971,8 @@ section
 .rating_r_5 i:nth-child(3)::before{color: #fbb53d; content: "\f005";}
 .rating_r_5 i:nth-child(4)::before{color: #fa9e1b; content: "\f005";}
 .rating_r_5 i:nth-child(5)::before{color: #ef910a; content: "\f005";}
+
+
 
 /*********************************
 8. Stats
