Criação de classes

--- a/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Ingressos";
 }
 
+@section Styles {
+    <link rel="stylesheet" type="text/css" href="~/styles/ingressos_styles.css">
+    <link rel="stylesheet" type="text/css" href="~/styles/ingressos_responsive.css">
+}
+
 <!-- Home -->
 
 <div class="home">
