--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -366,11 +366,10 @@
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
-												<div class="test_name">carla smith</div>
-												<div class="test_date">May 24, 2017</div>
+												<div class="test_name">Cristo Redentor</div>
 											</div>
-											<div class="test_quote_title">" Best holliday ever "</div>
-											<p class="test_quote_text">Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
+											<div class="test_quote_title">Rio de Janeiro</div>
+											<p class="test_quote_text">De braços abertos sobre a Guanabara, o Cristo Redentor recebe os visitantes e abençoa os cariocas.</p>
 										</div>
 									</div>
 								</div>
@@ -384,11 +383,10 @@
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
-												<div class="test_name">carla smith</div>
-												<div class="test_date">May 24, 2017</div>
+												<div class="test_name">Torre Eiffel</div>
 											</div>
-											<div class="test_quote_title">" Best holliday ever "</div>
-											<p class="test_quote_text">Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
+											<div class="test_quote_title">Paris</div>
+											<p class="test_quote_text">Esta joia da paisagem parisiense e símbolo máximo da França fica ainda mais espetacular quando vista de perto.</p>
 										</div>
 									</div>
 								</div>
@@ -397,16 +395,32 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_3.jpg" alt="https://unsplash.com/@@seefromthesky"></div>
+									<div class="test_image"><img src="images/test_3.jpeg" alt="https://unsplash.com/@@seefromthesky"></div>
 									<div class="test_icon"><img src="images/kayak.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
-												<div class="test_name">carla smith</div>
-												<div class="test_date">May 24, 2017</div>
+												<div class="test_name">Punta Cana</div>
 											</div>
-											<div class="test_quote_title">" Best holliday ever "</div>
-											<p class="test_quote_text">Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
+											<div class="test_quote_title">República Dominicana</div>
+											<p class="test_quote_text">A tropical Punta Cana se orgulha de ser um dos melhores destinos do Caribe, e sua fama é, de fato, justificada.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Testimonial Item -->
+							<div class="owl-item">
+								<div class="test_item">
+									<div class="test_image"><img src="images/test_4.jpeg" alt=""></div>
+									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
+									<div class="test_content_container">
+										<div class="test_content">
+											<div class="test_item_info">
+												<div class="test_name">Gramado</div>
+											</div>
+											<div class="test_quote_title">Rio Grande do Sul</div>
+											<p class="test_quote_text"> Romântica, charmosa, cheia de cultura, belas paisagens, atrações e ótima culinária.</p>
 										</div>
 									</div>
 								</div>
@@ -416,24 +430,6 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image"><img src="images/test_2.jpg" alt=""></div>
-									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
-									<div class="test_content_container">
-										<div class="test_content">
-											<div class="test_item_info">
-												<div class="test_name">carla smith</div>
-												<div class="test_date">May 24, 2017</div>
-											</div>
-											<div class="test_quote_title">" Best holliday ever "</div>
-											<p class="test_quote_text">Nullam eu convallis tortor. Suspendisse potenti. In faucibus massa arcu, vitae cursus mi hendrerit nec.</p>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Testimonial Item -->
-							<div class="owl-item">
-								<div class="test_item">
-									<div class="test_image"><img src="images/test_1.jpg" alt=""></div>
 									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
@@ -451,7 +447,7 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_3.jpg" alt=""></div>
+									<div class="test_image"><img src="images/test_3.jpeg" alt=""></div>
 									<div class="test_icon"><img src="images/kayak.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
