Scripts nas páginas

--- a/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
@@ -9,7 +9,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/cruzeiros.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/cruzeiros.jpg"></div>
 		<div class="home_content">
 			<div class="home_title"></div>
 		</div>
@@ -625,3 +625,13 @@
 			</div>
 		</div>		
 	</div>
+
+@section Scripts {
+	<script src="~/js/jquery-3.2.1.min.js"></script>
+	<script src="~/styles/bootstrap4/popper.js"></script>
+	<script src="~/styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="~/plugins/Isotope/isotope.pkgd.min.js"></script>
+	<script src="~/plugins/easing/easing.js"></script>
+	<script src="~/plugins/parallax-js-master/parallax.min.js"></script>
+	<script src="~/js/offers_custom.js"></script>
+}
