--- a/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
@@ -10,7 +10,7 @@
 <!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/feedback.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/feedback.jpg"></div>
 		<div class="home_content">
 			<div class="home_title">Feedback</div>
 		</div>
@@ -185,3 +185,12 @@
 			</div>
 		</div>
 	</div>
+
+@section Scripts {
+	<script src="~/js/jquery-3.2.1.min.js"></script>
+	<script src="~/styles/bootstrap4/popper.js"></script>
+	<script src="~/styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="~/plugins/colorbox/jquery.colorbox-min.js"></script>
+	<script src="~/plugins/parallax-js-master/parallax.min.js"></script>
+	<script src="~/js/blog_custom.js"></script>
+}
