--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -10,7 +10,7 @@
 <!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="images/sobrenos.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/sobrenos.jpg"></div>
 		<div class="home_content">
 			<div class="home_title">Sobre Nós</div>
 		</div>
@@ -111,3 +111,12 @@
 			</div>
 		</div>
 	</div>
+
+@section Scripts {
+	<script src="~/js/jquery-3.2.1.min.js"></script>
+	<script src="~/styles/bootstrap4/popper.js"></script>
+	<script src="~/styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="~/plugins/parallax-js-master/parallax.min.js"></script>
+	<script src="~/https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
+	<script src="~/js/contact_custom.js"></script>
+}
