--- a/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="pt">
+    
 <head>
     <title>Amanda Puertas</title>
     <meta charset="utf-8">
@@ -13,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/animate.css">
     <link rel="stylesheet" type="text/css" href="~/styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/styles/responsive.css">
-    @RenderSection("Styles", required: false)
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 
 <body>
@@ -271,12 +272,8 @@
 
     </div>
 
-    <script src="~/js/jquery-3.2.1.min.js"></script>
-    <script src="~/styles/bootstrap4/popper.js"></script>
-    <script src="~/styles/bootstrap4/bootstrap.min.js"></script>
-    <script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-    <script src="~/plugins/easing/easing.js"></script>
-    <script src="~/js/custom.js"></script>
+    
+    @await RenderSectionAsync("Scripts", required: false)
 
 </body>
 
