--- a/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
@@ -32,7 +32,7 @@
 						
 						<div class="blog_post">
 							<div class="blog_post_image">
-								<img src="images/feedback1.jpg">
+								<img src="../images/feedback1.jpg">
 							</div>
 							<div class="blog_post_title"><a href="#">Fonte do Amor Eterno - Gramado</a></div>
 							<div class="blog_post_text">
@@ -51,7 +51,7 @@
 						
 						<div class="blog_post">
 							<div class="blog_post_image">
-								<img src="images/feedback2.jpeg" alt="https://unsplash.com/@@tschax">
+								<img src="../images/feedback2.jpeg" alt="https://unsplash.com/@@tschax">
 							</div>
 							<div class="sidebar_title">@@naomi.fs e @@vicentesbarreto</div>
 						</div>
@@ -60,7 +60,7 @@
 						
 						<div class="blog_post">
 							<div class="blog_post_image">
-								<img src="images/blog_3.jpg" alt="https://unsplash.com/@@stilclassics">
+								<img src="../images/blog_3.jpg" alt="https://unsplash.com/@@stilclassics">
 								<div class="blog_post_date d-flex flex-column align-items-center justify-content-center">
 									<div class="blog_post_day">01</div>
 									<div class="blog_post_month">Dec, 2017</div>
@@ -139,7 +139,7 @@
 								<!-- Latest Post -->
 								<li class="latest_post clearfix">
 									<div class="latest_post_image">
-										<a href="#"><img src="images/latest_2.jpg" alt=""></a>
+										<a href="#"><img src="../images/latest_2.jpg" alt=""></a>
 									</div>
 									<div class="latest_post_content">
 										<div class="latest_post_title trans_200"><a href="#">Dream destination for you</a></div>
@@ -167,7 +167,7 @@
 								<!-- Latest Post -->
 								<li class="latest_post clearfix">
 									<div class="latest_post_image">
-										<a href="#"><img src="images/latest_4.jpg" alt=""></a>
+										<a href="#"><img src="../images/latest_4.jpg" alt=""></a>
 									</div>
 									<div class="latest_post_content">
 										<div class="latest_post_title trans_200"><a href="#">How to pick your vacation</a></div>
