--- a/AmandaViagens/AmandaViagens/wwwroot/styles/main_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/main_styles.css
@@ -1774,7 +1774,7 @@ section
 	padding-left: 48px;
 	padding-right: 48px;
 	padding-bottom: 88px;
-	background: linear-gradient(to top right, #fa9e1b, #8d4fff);
+	background: linear-gradient(to top right, #46A6A6, #F2E1AE);
 }
 .contact_form
 {
@@ -1829,7 +1829,7 @@ section
 	line-height: 53px;
 	padding-left: 29px;
 	padding-right: 29px;
-	background: #31124b;
+	background: #023959;
 	-webkit-transform: translateY(15px);
 	-moz-transform: translateY(15px);
 	-ms-transform: translateY(15px);
