--- a/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
@@ -118,94 +118,9 @@
                 <div class="row">
 
                     <!-- Footer Column -->
-                    <div class="col-lg-3 footer_column">
+                    <div class="col-lg-4 footer_column">
                         <div class="footer_col">
-                            <div class="footer_content footer_about">
-
-                                <p class="footer_about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer
-                                    eleme ntum orci eu vehicula pretium.</p>
-                                <ul class="footer_social_list">
-                                    <li class="social_list_item"><a target="_blank"
-                                            href="https://www.facebook.com/amandapuertasturismo?mibextid=ZbWKwL"><i
-                                                class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li class="social_list_item"><a target="_blank"
-                                            href="https://www.linkedin.com/in/amanda-puertas"><i class="fa fa-linkedin"
-                                                aria-hidden="true"></i></a></li>
-                                    <li class="social_list_item"><a target="_blank"
-                                            href="https://www.instagram.com/amandapuertas/"><i class="fa fa-instagram"
-                                                aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-3 footer_column">
-                        <div class="footer_col">
-                            <div class="footer_title">blog posts</div>
-                            <div class="footer_content footer_blog">
-
-                                <!-- Footer blog item -->
-                                <div class="footer_blog_item clearfix">
-                                    <div class="footer_blog_image"><img src="~/images/footer_blog_1.jpg"
-                                            alt="https://unsplash.com/@@avidenov"></div>
-                                    <div class="footer_blog_content">
-                                        <div class="footer_blog_title"><a href="blog.html">Travel with us this year</a>
-                                        </div>
-                                        <div class="footer_blog_date">Nov 29, 2017</div>
-                                    </div>
-                                </div>
-
-                                <!-- Footer blog item -->
-                                <div class="footer_blog_item clearfix">
-                                    <div class="footer_blog_image"><img src="~/images/footer_blog_2.jpg"
-                                            alt="https://unsplash.com/@@deannaritchie"></div>
-                                    <div class="footer_blog_content">
-                                        <div class="footer_blog_title"><a href="blog.html">New destinations for you</a>
-                                        </div>
-                                        <div class="footer_blog_date">Nov 29, 2017</div>
-                                    </div>
-                                </div>
-
-                                <!-- Footer blog item -->
-                                <div class="footer_blog_item clearfix">
-                                    <div class="footer_blog_image"><img src="~/images/footer_blog_3.jpg"
-                                            alt="https://unsplash.com/@@bergeryap87"></div>
-                                    <div class="footer_blog_content">
-                                        <div class="footer_blog_title"><a href="blog.html">Travel with us this year</a>
-                                        </div>
-                                        <div class="footer_blog_date">Nov 29, 2017</div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-3 footer_column">
-                        <div class="footer_col">
-                            <div class="footer_title">tags</div>
-                            <div class="footer_content footer_tags">
-                                <ul class="tags_list clearfix">
-                                    <li class="tag_item"><a href="#">design</a></li>
-                                    <li class="tag_item"><a href="#">fashion</a></li>
-                                    <li class="tag_item"><a href="#">music</a></li>
-                                    <li class="tag_item"><a href="#">video</a></li>
-                                    <li class="tag_item"><a href="#">party</a></li>
-                                    <li class="tag_item"><a href="#">photography</a></li>
-                                    <li class="tag_item"><a href="#">adventure</a></li>
-                                    <li class="tag_item"><a href="#">travel</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Footer Column -->
-                    <div class="col-lg-3 footer_column">
-                        <div class="footer_col">
-                            <div class="footer_title">Contato</div>
+                            <div class="footer_title">Contatos</div>
                             <div class="footer_content footer_contact">
                                 <ul class="contact_info_list">
                                     <li class="contact_info_item d-flex flex-row">
@@ -233,6 +148,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Footer Column -->
+                    <div class="col-lg-8 footer_column">
+                        <div class="footer_col">
+                            <div class="footer_title">Localização</div>
+                            <div class="footer_content footer_contact">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.2436832335266!2d-48.55377152452782!3d-22.495038623285847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c7458f09df92f7%3A0xc2b5216693383410!2sRua%20Ferrucio%20Bolla%2C%20106%20-%20Jardim%20Vista%20Alegre%2C%20Barra%20Bonita%20-%20SP%2C%2017340-232!5e0!3m2!1spt-BR!2sbr!4v1694789788454!5m2!1spt-BR!2sbr" 
+                                style="border:0" class="mt-4 w-100" height="100%" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
             </div>
