--- a/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
@@ -509,7 +509,7 @@ section
 	bottom: -11px;
 	width: calc(100% + 2px);
 	height: 2px;
-	background: linear-gradient(to right, #fa9e1b, #8d4fff);
+	background: linear-gradient(to right, #F2E1AE, #023959);
 	content: '';
 	opacity: 0;
 	-webkit-transition: all 200ms ease;
@@ -633,7 +633,7 @@ section
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
-	background: linear-gradient(to right, #fa9e1b, #8d4fff);
+	background: linear-gradient(to right, #F2E1AE, #023959);
 	z-index: 100;
 	opacity: 0;
 	visibility: hidden;
