--- a/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
@@ -30,7 +30,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@kensuarez -->
-										<div class="offers_image_background" style="background-image:url(images/offer_1.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/offer_1.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">MSC PREZIOSA</a></div>
 									</div>
 								</div>
@@ -71,7 +71,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@thoughtcatalog -->
-										<div class="offers_image_background" style="background-image:url(images/offer_5.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/offer_5.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Costa Fascinosa</a></div>
 									</div>
 								</div>
@@ -105,19 +105,19 @@
 
 						<!-- Offers Item -->
 
-						<div class="offers_item rating_5">
+						<div class="offers_item rating_5 mb-5">
 							<div class="row">
 								<div class="col-lg-1 temp_col"></div>
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@mindaugas -->
-										<div class="offers_image_background" style="background-image:url(images/offer_6.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">grand castle</a></div>
+										<div class="offers_image_background" style="background-image:url(../images/offer_6.jpg)"></div>
+										<div class="offer_name"><a href="single_listing.html">NORWEGIAN SPIRIT</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">$110<span>per night</span></div>
+										<div class="offers_price">R$3.463,00<span>por pessoa</span></div>
 										<div class="rating_r rating_r_5 offers_rating"  data-rating="5">
 											<i></i>
 											<i></i>
@@ -125,22 +125,21 @@
 											<i></i>
 											<i></i>
 										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum dolor sit amet.</p>
+										<p class="offers_text">Pacífico Sul: Kauai & Moorea</p>
+										<p class="offers_text">12 Dias</p>
+										<p class="offers_text">Saindo de: Honolulu, Oahu </p>
+										<p class="offers_text">Porto de desembarque: Papeete, Taiti, Polinésia Francesa</p>
 										<div class="offers_icons">
 											<ul class="offers_icons_list">
-												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
+												<li class="offers_icons_item"><img src="~/images/post.png" alt=""></li>
+												<li class="offers_icons_item"><img src="~/images/compass.png" alt=""></li>
+												<li class="offers_icons_item"><img src="~/images/bicycle.png" alt=""></li>
+												<li class="offers_icons_item"><img src="~/images/sailboat.png" alt=""></li>
 											</ul>
 										</div>
-										<div class="button book_button"><a href="#">book<span></span><span></span><span></span></a></div>
+										<div class="button book_button"><a href="#">Detalhes<span></span><span></span><span></span></a></div>
 										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
+											
 										</div>
 									</div>
 								</div>
@@ -149,19 +148,19 @@
 
 						<!-- Offers Item -->
 
-						<div class="offers_item rating_4">
+						<div class="offers_item rating_4 mb-5">
 							<div class="row">
 								<div class="col-lg-1 temp_col"></div>
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@rktkn -->
-										<div class="offers_image_background" style="background-image:url(images/offer_7.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">eurostar hotel</a></div>
+										<div class="offers_image_background" style="background-image:url(../images/offer_7.jpg)"></div>
+										<div class="offer_name"><a href="single_listing.html">Rhapsody of the Seas</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">$50<span>per night</span></div>
+										<div class="offers_price">R$941<span>por pessoa</span></div>
 										<div class="rating_r rating_r_4 offers_rating" data-rating="4">
 											<i></i>
 											<i></i>
@@ -169,7 +168,10 @@
 											<i></i>
 											<i></i>
 										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum dolor sit amet.</p>
+										<p class="offers_text">Bahamas & Perfect Day Cruise</p>
+										<p class="offers_text">3 Noites</p>
+										<p class="offers_text">Saindo de: Fort Lauderdale, Flórida</p>
+										<p class="offers_text">Porto de desembarque: Fort Lauderdale, Flórida</p>
 										<div class="offers_icons">
 											<ul class="offers_icons_list">
 												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
@@ -178,14 +180,7 @@
 												<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
 											</ul>
 										</div>
-										<div class="button book_button"><a href="#">book<span></span><span></span><span></span></a></div>
-										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
-										</div>
+										<div class="button book_button"><a href="#">Detalhes<span></span><span></span><span></span></a></div>
 									</div>
 								</div>
 							</div>
@@ -193,47 +188,7 @@
 
 						<!-- Offers Item -->
 
-						<div class="offers_item rating_3">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@@itsnwa -->
-										<div class="offers_image_background" style="background-image:url(images/offer_8.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">grand castle</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">$90<span>per night</span></div>
-										<div class="rating_r rating_r_3 offers_rating" data-rating="3">
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-											<i></i>
-										</div>
-										<p class="offers_text">Suspendisse potenti. In faucibus massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu convallis tortor. Lorem ipsum dolor sit amet.</p>
-										<div class="offers_icons">
-											<ul class="offers_icons_list">
-												<li class="offers_icons_item"><img src="images/post.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/compass.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/bicycle.png" alt=""></li>
-												<li class="offers_icons_item"><img src="images/sailboat.png" alt=""></li>
-											</ul>
-										</div>
-										<div class="button book_button"><a href="#">book<span></span><span></span><span></span></a></div>
-										<div class="offer_reviews">
-											<div class="offer_reviews_content">
-												<div class="offer_reviews_title">very good</div>
-												<div class="offer_reviews_subtitle">100 reviews</div>
-											</div>
-											<div class="offer_reviews_rating text-center">8.1</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						
 
 					</div>
 				</div>
