--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -222,7 +222,7 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image"><img src="images/test_2.jpg" alt="https://unsplash.com/@@tschax"></div>
-									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
+									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
@@ -239,7 +239,7 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image"><img src="images/test_3.jpeg" alt="https://unsplash.com/@@seefromthesky"></div>
-									<div class="test_icon"><img src="images/kayak.png" alt=""></div>
+									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
@@ -256,7 +256,7 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image"><img src="images/test_4.jpeg" alt=""></div>
-									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
+									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
