--- a/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
@@ -56,7 +56,7 @@
 }
 body
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -77,11 +77,11 @@ ul
 }
 p
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 14px;
 	line-height: 2;
 	font-weight: 400;
-	color: #929191;
+	color: #000000;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: #46a6a6 0 0 1px;
 	text-shadow: #46a6a6 0 0 1px;
@@ -1424,7 +1424,7 @@ section
 }
 .offers_price span
 {
-	font-size: 14px;
+	font-size: 20px;
 	font-weight: 400;
 	color: #46A6A6;
 	margin-left: 12px;
@@ -1440,10 +1440,9 @@ section
 }
 .offers_text
 {
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 400;
-	color: #929191;
-	margin-top: 16px;
+	color: #000000;
 	margin-bottom: 0px;
 }
 .offers_icons
