Página Sobre nós

--- a/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
@@ -51,10 +51,10 @@
                                     href="#">Detalhes<span></span><span></span><span></span></a>
                             </div>
                             <div class="intro_center text-center">
+                                <img src="~/images/beto.jpg" alt="" class="img-fluid px-3 py-3 ">
                                 <h3>Beto Carrero World</h3>
                                 <h4>1 Dia</h4>
                                 <h4>R$ 119,90</h4>
-
                             </div>
                         </div>
                     </div>
