--- a/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
@@ -36,13 +36,10 @@
 							</div>
 							<div class="blog_post_title"><a href="#">Fonte do Amor Eterno - Gramado</a></div>
 							<div class="blog_post_text">
-								<p>A Fonte de Amor Eterno fica disponível 24hs por dia e se trata de uma das melhores atrações gratuitas para usufruir em Gramado, como vimos. Qualquer um pode ter acesso à fonte e depositar os cadeados na estrutura que cerca a ponte. Mas é importante que seja um modelo colorido para combinar com a proposta da decoração.
+								<p>A Fonte de Amor Eterno fica disponível 24hs por dia e se trata de uma das melhores atrações gratuitas para usufruir em Gramado, como vimos. Qualquer um pode ter acesso à fonte e depositar os cadeados na estrutura que cerca a ponte.
 
 									Por isso é importante você adquirir um cadeado em uma das lojas das proximidades da Fonte do Amor Eterno em Gramado.
-									
-									A Fonte do Amor, portanto, é gratuita, pois o local é público, porém, precisa-se adquirir um cadeado. No entanto, o custo chega a ser módico.
-									
-									A vantagem de comprar o item nessas lojas é que você pode personalizá-lo. Acrescentar fitas, adesivos, cores, letras e, claro, colocar o nome do casal ou casais apaixonados. Depois, é só se dirigir à ponte e inserir os cadeados na estrutura.</p>
+									</p>
 							</div>
 
 						</div>
@@ -60,34 +57,11 @@
 						
 						<div class="blog_post">
 							<div class="blog_post_image">
-								<img src="../images/blog_3.jpg" alt="https://unsplash.com/@@stilclassics">
-								<div class="blog_post_date d-flex flex-column align-items-center justify-content-center">
-									<div class="blog_post_day">01</div>
-									<div class="blog_post_month">Dec, 2017</div>
-								</div>
+								<img src="../images/feedback3.jpg" alt="https://unsplash.com/@@tschax">
 							</div>
-							<div class="blog_post_meta">
-								<ul>
-									<li class="blog_post_meta_item"><a href="">by Lore Papp</a></li>
-									<li class="blog_post_meta_item"><a href="">Uncategorized</a></li>
-									<li class="blog_post_meta_item"><a href="">3 Comments</a></li>
-								</ul>
-							</div>
-							<div class="blog_post_title"><a href="#">Try these new dream destinations</a></div>
-							<div class="blog_post_text">
-								<p>Aenean in lacus ligula. Phasellus euismod gravida eros. Aenean nec ipsum aliquet, pharetra magna id, interdum sapien. Etiam id lorem eu nisl pellentesque semper. Nullam tincidunt metus placerat, suscipit leo ut, tempus nulla. Fusce at eleifend tellus. Ut eleifend dui nunc, non fermentum qua.</p>
-							</div>
-							<div class="blog_post_link"><a href="#">read more</a></div>
+							<div class="sidebar_title">Salinas de Maragogi - AL</div>
 						</div>
 
-					</div>
-						
-					<div class="blog_navigation">
-						<ul>
-							<li class="blog_dot active"><div></div>01.</li>
-							<li class="blog_dot"><div></div>02.</li>
-							<li class="blog_dot"><div></div>03.</li>
-						</ul>
 					</div>
 				</div>
 
@@ -115,71 +89,7 @@
 						</div>
 					</div>
 
-					<!-- Sidebar Latest Posts -->
-
-					<div class="sidebar_latest_posts">
-						<div class="sidebar_title">Latest Posts</div>
-						<div class="latest_posts_container">
-							<ul>
-
-								<!-- Latest Post -->
-								<li class="latest_post clearfix">
-									<div class="latest_post_image">
-										<a href="#"><img src="images/latest_1.jpg" alt=""></a>
-									</div>
-									<div class="latest_post_content">
-										<div class="latest_post_title trans_200"><a href="#">A simple blog post</a></div>
-										<div class="latest_post_meta">
-											<div class="latest_post_author trans_200"><a href="#">by Jane Smith</a></div>
-											<div class="latest_post_date trans_200"><a href="#">Aug 25, 2016</a></div>
-										</div>
-									</div>
-								</li>
-
-								<!-- Latest Post -->
-								<li class="latest_post clearfix">
-									<div class="latest_post_image">
-										<a href="#"><img src="../images/latest_2.jpg" alt=""></a>
-									</div>
-									<div class="latest_post_content">
-										<div class="latest_post_title trans_200"><a href="#">Dream destination for you</a></div>
-										<div class="latest_post_meta">
-											<div class="latest_post_author trans_200"><a href="#">by Jane Smith</a></div>
-											<div class="latest_post_date trans_200"><a href="#">Aug 25, 2016</a></div>
-										</div>
-									</div>
-								</li>
-
-								<!-- Latest Post -->
-								<li class="latest_post clearfix">
-									<div class="latest_post_image">
-										<a href="#"><img src="images/latest_3.jpg" alt=""></a>
-									</div>
-									<div class="latest_post_content">
-										<div class="latest_post_title trans_200"><a href="#">Tips to travel light</a></div>
-										<div class="latest_post_meta">
-											<div class="latest_post_author trans_200"><a href="#">by Jane Smith</a></div>
-											<div class="latest_post_date trans_200"><a href="#">Aug 25, 2016</a></div>
-										</div>
-									</div>
-								</li>
-
-								<!-- Latest Post -->
-								<li class="latest_post clearfix">
-									<div class="latest_post_image">
-										<a href="#"><img src="../images/latest_4.jpg" alt=""></a>
-									</div>
-									<div class="latest_post_content">
-										<div class="latest_post_title trans_200"><a href="#">How to pick your vacation</a></div>
-										<div class="latest_post_meta">
-											<div class="latest_post_author trans_200"><a href="#">by Jane Smith</a></div>
-											<div class="latest_post_date trans_200"><a href="#">Aug 25, 2016</a></div>
-										</div>
-									</div>
-								</li>
-
-							</ul>
-						</div>
+					
 					</div>
 				</div>
 			</div>
