--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -204,8 +204,8 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_1.jpg" alt="https://unsplash.com/@@anniegray"></div>
-									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
+									<div class="test_image"><img src="~/images/test_1.jpg" alt="https://unsplash.com/@@anniegray"></div>
+									<div class="test_icon"><img src="~/images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
 											<div class="test_item_info">
