--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -1,122 +1,183 @@
 @{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
 @section Styles {
-    <link rel="stylesheet" type="text/css" href="~/styles/sobre_styles.css">
-    <link rel="stylesheet" type="text/css" href="~/styles/sobre_responsive.css">
+	<link rel="stylesheet" type="text/css" href="~/styles/feedback_styles.css">
+	<link rel="stylesheet" type="text/css" href="~/styles/feedback_responsive.css">
+	<style>
+		.test_content_container {
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: auto;
+			padding: 5px;
+			background: #46a6a6b6;
+		}
+
+		.test_name {
+			font-size: 14px;
+			font-weight: 700;
+			color: #ffffff;
+			text-transform: uppercase;
+		}
+	</style>
 }
 
 <!-- Home -->
 
-	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/sobrenos.jpg"></div>
-		<div class="home_content">
-			<div class="home_title">Sobre Nós</div>
+<div class="home">
+	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/sobrenos.jpg"></div>
+	<div class="home_content">
+		<div class="home_title">Feedback</div>
+	</div>
+</div>
+
+<!-- Blog -->
+
+<div class="blog">
+	<div class="container">
+		<div class="row">
+
+			<!-- Blog Content -->
+
+			<div class="col-lg-8">
+
+				<div class="blog_post_container">
+
+					<!-- Blog Post -->
+
+					<div class="blog_post">
+						<div class="blog_post_image">
+							<img src="../images/coquetel.jpg">
+						</div>
+
+					</div>
+
+
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<!-- Contact -->
-
-	<div class="contact_form_section">
+	<div class="testimonials">
+		<div class="test_border"></div>
 		<div class="container">
+			<div class="row">
+				<div class="col text-center">
+					<h2 class="section_title">Momentos Especiais que o Turismo me proporciou</h2>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col">
 
-					<!-- Contact Form -->
-					<div class="contact_form_container">
-						<div class="contact_title text-center">get in touch</div>
-						<form action="#" id="contact_form" class="contact_form text-center">
-							<input type="text" id="contact_form_name" class="contact_form_name input_field" placeholder="Name" required="required" data-error="Name is required.">
-							<input type="text" id="contact_form_email" class="contact_form_email input_field" placeholder="E-mail" required="required" data-error="Email is required.">
-							<input type="text" id="contact_form_subject" class="contact_form_subject input_field" placeholder="Subject" required="required" data-error="Subject is required.">
-							<textarea id="contact_form_message" class="text_field contact_form_message" name="message" rows="4" placeholder="Message" required="required" data-error="Please, write us a message."></textarea>
-							<button type="submit" id="form_submit_button" class="form_submit_button button trans_200">send message<span></span><span></span><span></span></button>
-						</form>
+					<!-- Testimonials Slider -->
+					<div class="test_slider_container">
+						<div class="owl-carousel owl-theme test_slider">
+
+							<!-- Testimonial Item -->
+							<div class="owl-item">
+								<div class="test_item">
+									<div class="test_image">
+										<img src="~/images/chile.png" alt="https://unsplash.com/@@tschax">
+									</div>
+									<div class="test_content_container">
+										<div class="test_name text-white">Valle Nevado, Chile</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Testimonial Item -->
+							<div class="owl-item">
+								<div class="test_item">
+									<div class="test_image">
+										<img src="~/images/ancoradouro.png" alt="https://unsplash.com/@@tschax">
+									</div>
+									<div class="test_content_container">
+										<div class="test_name text-white">Abertura do 27º Encontro Ancoradouro</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Testimonial Item -->
+							<div class="owl-item">
+								<div class="test_item">
+									<div class="test_image">
+										<img src="~/images/chile.png" alt="https://unsplash.com/@@tschax">
+									</div>
+									<div class="test_content_container">
+										<div class="test_name text-white">Torre Eiffel</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Testimonial Item -->
+							<div class="owl-item">
+								<div class="test_item">
+									<div class="test_image">
+										<img src="~/images/ancoradouro.png" alt="https://unsplash.com/@@tschax">
+									</div>
+									<div class="test_content_container">
+										<div class="test_name text-white">Torre Eiffel</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+						<!-- Testimonials Slider Nav - Prev -->
+						<div class="test_slider_nav test_slider_prev">
+							<svg version="1.1" id="Layer_6" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="33px"
+								viewBox="0 0 28 33" enable-background="new 0 0 28 33" xml:space="preserve">
+								<defs>
+									<linearGradient id='test_grad_prev'>
+										<stop offset='0%' stop-color='#fa9e1b' />
+										<stop offset='100%' stop-color='#8d4fff' />
+									</linearGradient>
+								</defs>
+								<path class="nav_path" fill="#F3F6F9" d="M19,0H9C4.029,0,0,4.029,0,9v15c0,4.971,4.029,9,9,9h10c4.97,0,9-4.029,9-9V9C28,4.029,23.97,0,19,0z
+								M26,23.091C26,27.459,22.545,31,18.285,31H9.714C5.454,31,2,27.459,2,23.091V9.909C2,5.541,5.454,2,9.714,2h8.571
+								C22.545,2,26,5.541,26,9.909V23.091z" />
+								<polygon class="nav_arrow" fill="#F3F6F9" points="15.044,22.222 16.377,20.888 12.374,16.885 16.377,12.882 15.044,11.55 9.708,16.885 11.04,18.219 
+								11.042,18.219 " />
+							</svg>
+						</div>
+
+						<!-- Testimonials Slider Nav - Next -->
+						<div class="test_slider_nav test_slider_next">
+							<svg version="1.1" id="Layer_7" xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="33px"
+								viewBox="0 0 28 33" enable-background="new 0 0 28 33" xml:space="preserve">
+								<defs>
+									<linearGradient id='test_grad_next'>
+										<stop offset='0%' stop-color='#fa9e1b' />
+										<stop offset='100%' stop-color='#8d4fff' />
+									</linearGradient>
+								</defs>
+								<path class="nav_path" fill="#F3F6F9" d="M19,0H9C4.029,0,0,4.029,0,9v15c0,4.971,4.029,9,9,9h10c4.97,0,9-4.029,9-9V9C28,4.029,23.97,0,19,0z
+							M26,23.091C26,27.459,22.545,31,18.285,31H9.714C5.454,31,2,27.459,2,23.091V9.909C2,5.541,5.454,2,9.714,2h8.571
+							C22.545,2,26,5.541,26,9.909V23.091z" />
+								<polygon class="nav_arrow" fill="#F3F6F9" points="13.044,11.551 11.71,12.885 15.714,16.888 11.71,20.891 13.044,22.224 18.379,16.888 17.048,15.554 
+							17.046,15.554 " />
+							</svg>
+						</div>
 					</div>
 
 				</div>
 			</div>
+
 		</div>
 	</div>
-
-	<!-- About -->
-	<div class="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-5">
-					
-					<!-- About - Image -->
-
-					<div class="about_image">
-						<img src="images/man.png" alt="">
-					</div>
-
-				</div>
-
-				<div class="col-lg-4">
-					
-					<!-- About - Content -->
-
-					<div class="about_content">
-						<p class="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula iaculis consequat nisl. Nunc et suscipit urna pretium.</p>
-						<ul class="about_social_list">
-							<li class="about_social_item"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-							<li class="about_social_item"><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-							<li class="about_social_item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li class="about_social_item"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li class="about_social_item"><a href="#"><i class="fa fa-behance"></i></a></li>
-						</ul>
-					</div>
-
-				</div>
-
-				<div class="col-lg-3">
-					
-					<!-- About Info -->
-
-					<div class="about_info">
-						<ul class="contact_info_list">
-							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/placeholder.svg" alt=""></div></div>
-								<div class="contact_info_text">4127 Raoul Wallenber 45b-c Gibraltar</div>
-							</li>
-							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/phone-call.svg" alt=""></div></div>
-								<div class="contact_info_text">2556-808-8613</div>
-							</li>
-							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/message.svg" alt=""></div></div>
-								<div class="contact_info_text"><a href="mailto:contactme@@gmail.com?Subject=Hello" target="_top">contactme@@gmail.com</a></div>
-							</li>
-							<li class="contact_info_item d-flex flex-row">
-								<div><div class="contact_info_icon"><img src="images/planet-earth.svg" alt=""></div></div>
-								<div class="contact_info_text"><a href="https://colorlib.com">www.colorlib.com</a></div>
-							</li>
-						</ul>
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<!-- Google Map -->
-		
-	<div class="travelix_map">
-		<div id="google_map" class="google_map">
-			<div class="map_container">
-				<div id="map"></div>
-			</div>
-		</div>
-	</div>
+</div>
 
 @section Scripts {
 	<script src="~/js/jquery-3.2.1.min.js"></script>
 	<script src="~/styles/bootstrap4/popper.js"></script>
 	<script src="~/styles/bootstrap4/bootstrap.min.js"></script>
+	<script src="~/plugins/colorbox/jquery.colorbox-min.js"></script>
 	<script src="~/plugins/parallax-js-master/parallax.min.js"></script>
-	<script src="~/https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
-	<script src="~/js/contact_custom.js"></script>
+	<script src="~/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
+	<script src="~/js/blog_custom.js"></script>
 }
