--- a/AmandaViagens/AmandaViagens/wwwroot/styles/sobre_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/sobre_styles.css
@@ -129,7 +129,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(11, 175, 33, 0.733) 0 0 1px;
 	text-shadow: rgba(182, 14, 14, 0.753) 0 0 1px;
@@ -1313,4 +1313,153 @@ section
 .footer_nav_item a:hover
 {
 	color: #FFFFFF;
+}
+
+/*********************************
+10. Testimonials
+*********************************/
+
+.testimonials
+{
+	width: 100%;
+	padding-top: 105px;
+	padding-bottom: 105px;
+	background: #FFFFFF;
+}
+.test_border
+{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(to right, #F2E1AE, #023959);
+}
+
+/*********************************
+10.1 Testimonials Slider
+*********************************/
+
+.test_slider_container
+{
+	width: 100%;
+	margin-top: 54px;
+}
+.test_item
+{
+	padding-top: 36px;
+}
+.test_icon
+{
+	position: absolute;
+	top: 0px;
+	left: 41px;
+	width: 72px;
+	height: 72px;
+	background: #023959;
+	border-radius: 50%;
+	overflow: hidden;
+}
+.test_icon img
+{
+	position: relative;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	width: auto !important;
+}
+.test_content_container
+{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 44.1%;
+	background: #46a6a6b6;
+}
+.test_content
+{
+	width: 100%;
+	height: 100%;
+	padding-left: 38px;
+	padding-top: 44px;
+	padding-right: 40px;
+}
+.test_item_info
+{
+	position: absolute;
+	left: 41px;
+	bottom: calc(100% - 18px);
+	background: #FFFFFF;
+	padding-left: 20px;
+	padding-right: 21px;
+	padding-top: 9px;
+	padding-bottom: 10px;
+	z-index: 10;
+}
+.test_name
+{
+	font-size: 14px;
+	font-weight: 700;
+	color: #2d2c2c;
+	text-transform: uppercase;
+}
+.test_date
+{
+	font-size: 11px;
+	margin-top: 2px;
+	color: #2d2c2c;
+	padding-left: 2px;
+}
+.test_quote_title
+{
+	font-size: 20px;
+	font-weight: 500;
+	color: #FFFFFF;
+	padding-left: 3px;
+}
+.test_quote_text
+{
+	font-weight: 500;
+	color: #FFFFFF;
+	margin-top: 11px;
+}
+.test_slider_nav
+{
+	position: absolute;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	transform: translateY(-50%);
+	z-index: 10;
+	cursor: pointer;
+}
+.test_slider_nav .nav_path,
+.test_slider_nav .nav_arrow
+{
+	fill: #c4ced2;
+}
+.test_slider_prev
+{
+	left: -75px;
+}
+.test_slider_next
+{
+	right: -75px;
+}
+.test_slider_prev:hover .nav_path,
+.test_slider_prev:hover .nav_arrow
+{
+	fill: url(#test_grad_prev);
+}
+.test_slider_next:hover .nav_path,
+.test_slider_next:hover .nav_arrow
+{
+	fill: url(#test_grad_next);
 }
