--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -34,15 +34,19 @@
 	</div>
 </div>
 
+
+
 <!-- Blog -->
 
 <div class="blog">
 	<div class="container">
 		<div class="row">
+			
 
 			<!-- Blog Content -->
 
 			<div class="col-lg-8">
+				
 
 				<div class="blog_post_container">
 
@@ -104,10 +108,10 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image">
-										<img src="~/images/chile.png" alt="https://unsplash.com/@@tschax">
+										<img src="~/images/inauguraçãocruzeiro.png" alt="https://unsplash.com/@@tschax">
 									</div>
 									<div class="test_content_container">
-										<div class="test_name text-white">Torre Eiffel</div>
+										<div class="test_name text-white"> Inauguração do gigante MSC SEAVIEW</div>
 									</div>
 								</div>
 							</div>
@@ -116,15 +120,17 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image">
-										<img src="~/images/ancoradouro.png" alt="https://unsplash.com/@@tschax">
+										<img src="~/images/SEASHORE.png" alt="https://unsplash.com/@@tschax">
 									</div>
 									<div class="test_content_container">
-										<div class="test_name text-white">Torre Eiffel</div>
+										<div class="test_name text-white">Inauguração do Navio MSC SEASHORE</div>
 									</div>
 								</div>
 							</div>
 
 						</div>
+
+
 
 						<!-- Testimonials Slider Nav - Prev -->
 						<div class="test_slider_nav test_slider_prev">
