Página ingressos e cruzeiros

--- a/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
@@ -3,13 +3,13 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" type="text/css" href="~/styles/cruzeiros_styles.css">
-    <link rel="stylesheet" type="text/css" href="~/styles/cruzeiros_responsive.css">
+    <link rel="stylesheet" type="text/css" href="~/styles/ingressos_styles.css">
+    <link rel="stylesheet" type="text/css" href="~/styles/ingressos_responsive.css">
 }
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/cruzeiros.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/ingressos.jpg"></div>
 		<div class="home_content">
 			<div class="home_title"></div>
 		</div>
@@ -30,13 +30,13 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@kensuarez -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_1.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">MSC PREZIOSA</a></div>
+										<div class="offers_image_background" style="background-image:url(../images/castelo.jpg)"></div>
+										<div class="offer_name"><a href="single_listing.html">Walt Disney World</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">R$4.590 <span>por pessoa</span></div>
+										<div class="offers_price">R$ 548,76<span>por ingresso</span></div>
 										<div class="rating_r rating_r_4 offers_rating" data-rating="4">
 											<i></i>
 											<i></i>
@@ -44,10 +44,8 @@
 											<i></i>
 											<i></i>
 										</div>
-										<p class="offers_text">América do Sul</p>
-										<p class="offers_text"> 7 Noites</p>
-										<p class="offers_text">Saindo de: Santos (São Paulo) </p>
-										<p class="offers_text">Porto de desembarque: Santos (São Paulo)</p>
+										<p class="offers_text">INGRESSOS PARA OS PARQUES TEMÁTICOS WALT DISNEY WORLD</p>
+										<p class="offers_text">1 Dia (10 anos ou mais)</p>
 										<div class="button book_button"><a href="#">Detalhes<span></span><span></span><span></span></a></div>
 									
 									</div>
@@ -63,13 +61,13 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@thoughtcatalog -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_2.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">Costa Fascinosa</a></div>
+										<div class="offers_image_background" style="background-image:url(../images/beto.jpg)"></div>
+										<div class="offer_name"><a href="single_listing.html">Beto Carrero World</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">R$4.646,25<span>por pessoa</span></div>
+										<div class="offers_price">R$ 139,90<span>por ingresso</span></div>
 										<div class="rating_r rating_r_3 offers_rating" data-rating="3">
 											<i></i>
 											<i></i>
@@ -77,10 +75,8 @@
 											<i></i>
 											<i></i>
 										</div>
-										<p class="offers_text">América do Sul</p>
-										<p class="offers_text">9 Dias</p>
-										<p class="offers_text">Saindo de: Rio de Janeiro (Rio de Janeiro) </p>
-										<p class="offers_text">Porto de desembarque: Rio de Janeiro (Rio de Janeiro)</p>
+										<p class="offers_text">PASSAPORTE DE ACESSO 1º LOTE</p>
+										<p class="offers_text">1 Dia (A partir de 05 anos)</p>
 										<div class="button book_button"><a href="#">Detalhes<span></span><span></span><span></span></a></div>
 									</div>
 								</div>
@@ -95,13 +91,13 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@mindaugas -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_3.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">NORWEGIAN SPIRIT</a></div>
+										<div class="offers_image_background" style="background-image:url(../images/thermas.jpg)"></div>
+										<div class="offer_name"><a href="single_listing.html">Thermas dos Laranjais</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">R$3.463,00<span>por pessoa</span></div>
+										<div class="offers_price">R$ 150,00<span>por ingresso</span></div>
 										<div class="rating_r rating_r_5 offers_rating"  data-rating="5">
 											<i></i>
 											<i></i>
@@ -109,10 +105,8 @@
 											<i></i>
 											<i></i>
 										</div>
-										<p class="offers_text">Pacífico Sul: Kauai & Moorea</p>
-										<p class="offers_text">12 Dias</p>
-										<p class="offers_text">Saindo de: Honolulu, Oahu </p>
-										<p class="offers_text">Porto de desembarque: Papeete, Taiti, Polinésia Francesa</p>
+										<p class="offers_text">INGRESSO DIÁRIO INTEIRA OUTUBRO E NOVEMBRO 2023</p>
+										<p class="offers_text">1 Dia</p>
 										<div class="button book_button"><a href="#">Detalhes<span></span><span></span><span></span></a></div>
 										<div class="offer_reviews">
 											
@@ -130,13 +124,13 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@rktkn -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_4.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">Rhapsody of the Seas</a></div>
+										<div class="offers_image_background" style="background-image:url(../images/hopihari.jpg)"></div>
+										<div class="offer_name"><a href="single_listing.html">Hopi Hari</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">R$941<span>por pessoa</span></div>
+										<div class="offers_price">R$ 159,90<span>por ingresso</span></div>
 										<div class="rating_r rating_r_4 offers_rating" data-rating="4">
 											<i></i>
 											<i></i>
@@ -144,10 +138,8 @@
 											<i></i>
 											<i></i>
 										</div>
-										<p class="offers_text">Bahamas & Perfect Day Cruise</p>
-										<p class="offers_text">3 Noites</p>
-										<p class="offers_text">Saindo de: Fort Lauderdale, Flórida</p>
-										<p class="offers_text">Porto de desembarque: Fort Lauderdale, Flórida</p>
+										<p class="offers_text">HORA DO HORROR</p>
+										<p class="offers_text">1 Dia</p>
 										<div class="button book_button"><a href="#">Detalhes<span></span><span></span><span></span></a></div>
 									</div>
 								</div>
