--- a/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="~/styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/styles/responsive.css">
     <link rel="icon" type="image/x-icon" href="~/images/logosmall.jpg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     @await RenderSectionAsync("Styles", required: false)
 </head>
 
