--- a/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
@@ -371,7 +371,7 @@ section
 }
 .social_list_item:hover a i
 {
-	color: #fa9e1c;
+	color: #F2E1AE;
 }
 .social_list_item a i
 {
@@ -402,7 +402,7 @@ section
 }
 .user_box_link a:hover
 {
-	color: #fa9e1c;
+	color: #F2E1AE;
 }
 .user_box_login
 {
@@ -1395,7 +1395,7 @@ section
 	position: absolute;
 	left: 0;
 	bottom: 27px;
-	width: 180px;
+	width: 50%;
 	height: 33px;
 	background: #023959;
 	overflow: hidden;
@@ -1732,7 +1732,7 @@ section
 .contact_info_item:hover .contact_info_text,
 .contact_info_item:hover .contact_info_text a
 {
-	color: #fa9e1b;
+	color: #F2E1AE;
 }
 
 /*********************************
