--- a/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
@@ -366,7 +366,7 @@ section
 }
 .social_list_item:hover a i
 {
-	color: #fa9e1c;
+	color: #F2E1AE;
 }
 .social_list_item a i
 {
@@ -397,7 +397,7 @@ section
 }
 .user_box_link a:hover
 {
-	color: #fa9e1c;
+	color: #F2E1AE;
 }
 .user_box_login
 {
@@ -504,7 +504,7 @@ section
 	bottom: -11px;
 	width: calc(100% + 2px);
 	height: 2px;
-	background: linear-gradient(to right, #fa9e1b, #8d4fff);
+	background: linear-gradient(to right, #F2E1AE, #023959);
 	content: '';
 	opacity: 0;
 	-webkit-transition: all 200ms ease;
@@ -1351,7 +1351,7 @@ section
 .contact_info_item:hover .contact_info_text,
 .contact_info_item:hover .contact_info_text a
 {
-	color: #fa9e1b;
+	color: #F2E1AE;
 }
 
 /*********************************
