--- a/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
@@ -9,7 +9,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/cruzeiros.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/cruzeiros/cruzeiros.jpg"></div>
 		<div class="home_content">
 			<div class="home_title">Cruzeiros</div>
 			<div class="home_title"></div>
@@ -31,7 +31,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@kensuarez -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_1.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_1.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">MSC PREZIOSA</a></div>
 									</div>
 								</div>
@@ -64,7 +64,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@thoughtcatalog -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_2.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_2.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Costa Fascinosa</a></div>
 									</div>
 								</div>
@@ -96,7 +96,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@mindaugas -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_3.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_3.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">NORWEGIAN SPIRIT</a></div>
 									</div>
 								</div>
@@ -131,7 +131,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@rktkn -->
-										<div class="offers_image_background" style="background-image:url(../images/offer_4.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_4.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Rhapsody of the Seas</a></div>
 									</div>
 								</div>
