--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -153,7 +153,7 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="~/images/test_1.jpg" alt="https://unsplash.com/@@anniegray"></div>
+									<div class="test_image"><img src="~/images/pontos/cristo.jpg" alt="https://unsplash.com/@@anniegray"></div>
 									<div class="test_icon"><img src="~/images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
@@ -170,7 +170,7 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_2.jpg" alt="https://unsplash.com/@@tschax"></div>
+									<div class="test_image"><img src="images/pontos/torre.jpg" alt="https://unsplash.com/@@tschax"></div>
 									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
@@ -187,7 +187,7 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_3.jpeg" alt="https://unsplash.com/@@seefromthesky"></div>
+									<div class="test_image"><img src="images/pontos/praia.jpeg" alt="https://unsplash.com/@@seefromthesky"></div>
 									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
@@ -204,7 +204,7 @@
 							<!-- Testimonial Item -->
 							<div class="owl-item">
 								<div class="test_item">
-									<div class="test_image"><img src="images/test_4.jpeg" alt=""></div>
+									<div class="test_image"><img src="images/pontos/sul.jpeg" alt=""></div>
 									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
 									<div class="test_content_container">
 										<div class="test_content">
