--- a/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
@@ -9,7 +9,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/ingressos.jpg"></div>
+		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/ingressos/ingressos.jpg"></div>
 		<div class="home_content">
 			<div class="home_title">Ingressos</div>
 			<div class="home_title"></div>
@@ -31,7 +31,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@kensuarez -->
-										<div class="offers_image_background" style="background-image:url(../images/castelo.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/ingressos/castelo.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Walt Disney World</a></div>
 									</div>
 								</div>
@@ -62,7 +62,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@thoughtcatalog -->
-										<div class="offers_image_background" style="background-image:url(../images/beto.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/ingressos/beto.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Beto Carrero World</a></div>
 									</div>
 								</div>
@@ -92,7 +92,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@mindaugas -->
-										<div class="offers_image_background" style="background-image:url(../images/thermas.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/ingressos/thermas.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Thermas dos Laranjais</a></div>
 									</div>
 								</div>
@@ -125,7 +125,7 @@
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@rktkn -->
-										<div class="offers_image_background" style="background-image:url(../images/hopihari.jpg)"></div>
+										<div class="offers_image_background" style="background-image:url(../images/ingressos/hopihari.jpg)"></div>
 										<div class="offer_name"><a href="single_listing.html">Hopi Hari</a></div>
 									</div>
 								</div>
