--- a/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/cruzeiros_styles.css
@@ -134,7 +134,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -455,7 +455,7 @@ section
 }
 .logo a
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 30px;
 	color: #f4f4f8;
 	font-weight: 800;
@@ -493,7 +493,7 @@ section
 }
 .main_nav_item a
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 13px;
 	font-weight: 600;
 	color: #FFFFFF;
@@ -669,7 +669,7 @@ section
 {
 	display: inline-block;
 	position: relative;
-	font-family: 'Beyond';
+	font-family: 'Itim';
 	font-size: 36px;
 	color: #FFFFFF;
 	font-weight: 400;
@@ -781,7 +781,7 @@ section
 {
 	font-size: 72px;
 	font-weight: 800;
-	color: #FFFFFF;
+	color: #023959;
 	text-transform: uppercase;
 	white-space: nowrap;
 }
@@ -832,7 +832,7 @@ section
 .rating_5 i:nth-child(4){color: #fa9e1b;}
 .rating_r i::before
 {
-	font-family: 'FontAwesome';
+	font-family: 'Itim';
 	content: "\f006";
 	font-style: normal;
 	font-size: 19px;
@@ -1202,7 +1202,7 @@ section
 	width: 10px;
 	height: 10px;
 	content: '+';
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 13px;
 	line-height: 8px;
 	color: #FFFFFF;
