--- a/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
@@ -51,7 +51,7 @@
 }
 body
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -72,7 +72,7 @@ ul
 }
 p
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 14px;
 	line-height: 2;
 	font-weight: 400;
@@ -129,7 +129,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -450,7 +450,7 @@ section
 }
 .logo a
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 30px;
 	color: #f4f4f8;
 	font-weight: 800;
@@ -488,7 +488,7 @@ section
 }
 .main_nav_item a
 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Itim';
 	font-size: 13px;
 	font-weight: 600;
 	color: #FFFFFF;
@@ -664,7 +664,7 @@ section
 {
 	display: inline-block;
 	position: relative;
-	font-family: 'Beyond';
+	font-family: 'Itim';
 	font-size: 36px;
 	color: #FFFFFF;
 	font-weight: 400;
