--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -46,6 +46,8 @@
 			<!-- Blog Content -->
 
 			<div class="col-lg-8">
+
+				<h3>A Amanda Puertas Viagens & Turismo é muito mais do que uma simples agência de viagens; é um portal para experiências inesquecíveis ao redor do mundo. Fundada com a paixão por explorar destinos únicos, nossa agência se destaca por oferecer roteiros personalizados, atendimento dedicado e parcerias exclusivas.</h3>
 				
 
 				<div class="blog_post_container">
@@ -69,7 +71,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col text-center">
-					<h2 class="section_title">Momentos Especiais que o Turismo me proporciou</h2>
+					<h2 class="section_title">Momentos Especiais que o Turismo me proporcionou</h2>
 				</div>
 			</div>
 			<div class="row">
