--- a/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
@@ -760,6 +760,7 @@ section
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
+	background-color: #F2E1AE9c;
 }
 .home_content
 {
